--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 	</script>
 
 	<script src="out/helpers.js"></script>
+	<script src="out/fancytext.js"></script>
 	<script src="out/calculator.js"></script>
 	<script src="out/sketch.js"></script>
 
