--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			Note
 			<select id="noteInput" class="noteSelect"></select>
 			<input id="noteOctaveInput" type="number" min="-1" max="9" value="4">
-			in the key of
+			in the key of concert
 			<select id="keyInput" class="noteSelectKey"></select>
 			of an instrument in the key of
 			<select id="instrumentKeyInput" class="noteSelectKey"></select>
-			→the key of
+			→the key of concert
 			<select id="outKeyInput" class="noteSelectKey"></select>
 			of an instrument in the key of
 			<select id="outInstrumentKeyInput" class="noteSelectKey"></select>
