--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<script src="../p5/p5-1.9.4.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8" />
 
