Added animations, will fix details later

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
 			<br>
 
+			<label for="totalAnimTime">Animation Speed</label>
+			<select id="totalAnimTime">
+				<option value="5">Slow</option>
+				<option value="3" selected>Normal</option>
+				<option value="1">Fast</option>
+			</select>
+
 			<button onclick="calculate();">Calculate!</button>
 		</div>
 		<canvas id="defaultCanvas0"></canvas>
