Made pausing shortcuts always show, added highlight for key inputs

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			<select id="noteInput" class="noteSelect"></select>
 			<input id="noteOctaveInput" type="number" min="-1" max="9" value="4">
 			in the key of concert
-			<select id="keyInput" class="noteSelectKey"></select>
+			<select id="keyInput" class="noteSelectKey keyHighlight"></select>
 			of an instrument in the key of
-			<select id="instrumentKeyInput" class="noteSelectKey"></select>
+			<select id="instrumentKeyInput" class="noteSelectKey instkeyHighlight"></select>
 			→the key of concert
-			<select id="outKeyInput" class="noteSelectKey"></select>
+			<select id="outKeyInput" class="noteSelectKey keyHighlight"></select>
 			of an instrument in the key of
-			<select id="outInstrumentKeyInput" class="noteSelectKey"></select>
+			<select id="outInstrumentKeyInput" class="noteSelectKey instkeyHighlight"></select>
 
 			<br>
 
