--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 		})();
 	</script>
 
-	<script src="out/helpers.js"></script>
-	<script src="out/fancytext.js"></script>
+	<script src="../p5Utils/index.js"></script>
 	<script src="out/calculator.js"></script>
 	<script src="out/sketch.js"></script>
 
